--- a/Filters/DeCSS/DeCSS2008.vcproj
+++ b/Filters/DeCSS/DeCSS2008.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="DeCSS"
 	ProjectGUID="{D7C544C4-B5C5-41E2-A575-0B13312692FD}"
 	RootNamespace="DeCSS"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
