--- a/Filters/Decoders/MpegAudio/djbfft/djbfft2008.vcproj
+++ b/Filters/Decoders/MpegAudio/djbfft/djbfft2008.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="djbfft"
 	ProjectGUID="{FB15DBB5-C9F1-4D23-B8C5-F8291DEA6826}"
 	RootNamespace="djbfft"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
