--- a/Filters/Decoders/MpegAudio/dtsdec/vc++/libdts2008.vcproj
+++ b/Filters/Decoders/MpegAudio/dtsdec/vc++/libdts2008.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="libfaad"
-	ProjectGUID="{5EFCFACB-1835-422C-ACDA-E3B3A2F51387}"
-	RootNamespace="libfaad"
+	Name="libdts"
+	ProjectGUID="{68876F9C-E66B-40CE-A590-58FDCE7B8CCB}"
+	RootNamespace="libdts"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
@@ -19,7 +19,7 @@
 	</ToolFiles>
 	<Configurations>
 		<Configuration
-			Name="Release|Win32"
+			Name="Debug|Win32"
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="4"
@@ -44,18 +44,157 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions=""
+				Optimization="0"
+				AdditionalIncludeDirectories=".,../include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;LIBDTS_DOUBLE"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="1"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				SuppressStartupBanner="true"
+				DebugInformationFormat="4"
+				CompileAs="0"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="_DEBUG"
+				Culture="1033"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLibrarianTool"
+				OutputFile=".\Debug\libdts.lib"
+				SuppressStartupBanner="true"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Debug|x64"
+			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			ConfigurationType="4"
+			UseOfMFC="0"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				TargetEnvironment="3"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories=".,../include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;LIBDTS_DOUBLE"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="1"
+				UsePrecompiledHeader="0"
+				WarningLevel="3"
+				SuppressStartupBanner="true"
+				DebugInformationFormat="3"
+				CompileAs="0"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="_DEBUG"
+				Culture="1033"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLibrarianTool"
+				OutputFile=".\Debug\libdts.lib"
+				SuppressStartupBanner="true"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
+		</Configuration>
+		<Configuration
+			Name="Release|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="4"
+			UseOfMFC="0"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="1"
+			WholeProgramOptimization="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;"
+				AdditionalIncludeDirectories=".,../include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;LIBDTS_DOUBLE"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\Release/libfaad.pch"
-				BrowseInformation="1"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				SuppressStartupBanner="true"
+				CompileAs="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -63,14 +202,15 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="1043"
+				Culture="1033"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				AdditionalOptions=""
+				OutputFile=".\Release\libdts.lib"
+				SuppressStartupBanner="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -116,14 +256,17 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions=""
-				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;"
+				Optimization="2"
+				InlineFunctionExpansion="1"
+				AdditionalIncludeDirectories=".,../include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;LIBDTS_DOUBLE"
+				StringPooling="true"
 				RuntimeLibrary="0"
+				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\Release/libfaad.pch"
-				BrowseInformation="1"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				SuppressStartupBanner="true"
+				CompileAs="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -131,151 +274,15 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="1043"
+				Culture="1033"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				AdditionalOptions=""
-			/>
-			<Tool
-				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCXDCMakeTool"
-			/>
-			<Tool
-				Name="VCBscMakeTool"
-			/>
-			<Tool
-				Name="VCFxCopTool"
-			/>
-			<Tool
-				Name="VCPostBuildEventTool"
-			/>
-		</Configuration>
-		<Configuration
-			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="4"
-			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="false"
-			CharacterSet="1"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
-			<Tool
-				Name="VCCLCompilerTool"
-				AdditionalOptions=""
-				Optimization="0"
-				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
-				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\Debug/libfaad.pch"
-				BrowseInformation="1"
-				WarningLevel="3"
-				DebugInformationFormat="4"
-			/>
-			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="_DEBUG"
-				Culture="1043"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
-			<Tool
-				Name="VCLibrarianTool"
-				AdditionalOptions=""
-			/>
-			<Tool
-				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCXDCMakeTool"
-			/>
-			<Tool
-				Name="VCBscMakeTool"
-			/>
-			<Tool
-				Name="VCFxCopTool"
-			/>
-			<Tool
-				Name="VCPostBuildEventTool"
-			/>
-		</Configuration>
-		<Configuration
-			Name="Debug|x64"
-			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
-			ConfigurationType="4"
-			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="false"
-			CharacterSet="1"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-				TargetEnvironment="3"
-			/>
-			<Tool
-				Name="VCCLCompilerTool"
-				AdditionalOptions=""
-				Optimization="0"
-				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
-				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\Debug/libfaad.pch"
-				BrowseInformation="1"
-				WarningLevel="3"
-				DebugInformationFormat="3"
-			/>
-			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="_DEBUG"
-				Culture="1043"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
-			<Tool
-				Name="VCLibrarianTool"
-				AdditionalOptions=""
+				OutputFile=".\Release\libdts.lib"
+				SuppressStartupBanner="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -319,16 +326,16 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions=""
 				Optimization="0"
-				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;FIXED_POINT"
+				AdditionalIncludeDirectories=".,../include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;LIBDTS_FIXED"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\Debug/libfaad.pch"
-				BrowseInformation="1"
 				WarningLevel="3"
+				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
+				CompileAs="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -336,14 +343,15 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="_DEBUG"
-				Culture="1043"
+				Culture="1033"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				AdditionalOptions=""
+				OutputFile=".\Debug_Fixed_Point\libdts.lib"
+				SuppressStartupBanner="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -388,16 +396,16 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions=""
 				Optimization="0"
-				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;FIXED_POINT"
+				AdditionalIncludeDirectories=".,../include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;LIBDTS_FIXED"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\Debug/libfaad.pch"
-				BrowseInformation="1"
 				WarningLevel="3"
+				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
+				CompileAs="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -405,14 +413,15 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="_DEBUG"
-				Culture="1043"
+				Culture="1033"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				AdditionalOptions=""
+				OutputFile=".\Debug_Fixed_Point\libdts.lib"
+				SuppressStartupBanner="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -438,6 +447,7 @@
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="1"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -456,18 +466,17 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions=""
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;FIXED_POINT"
+				AdditionalIncludeDirectories=".,../include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;LIBDTS_FIXED"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\Release/libfaad.pch"
-				BrowseInformation="1"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				SuppressStartupBanner="true"
+				CompileAs="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -475,14 +484,15 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="1043"
+				Culture="1033"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				AdditionalOptions=""
+				OutputFile=".\Release_Fixed_Point\libdts.lib"
+				SuppressStartupBanner="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -528,14 +538,12 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions=""
-				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;FIXED_POINT"
+				AdditionalIncludeDirectories=".,../include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;LIBDTS_FIXED"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\Release/libfaad.pch"
-				BrowseInformation="1"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				CompileAs="0"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -543,14 +551,15 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="1043"
+				Culture="1033"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				AdditionalOptions=""
+				OutputFile=".\Release_Fixed_Point\libdts.lib"
+				SuppressStartupBanner="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -577,143 +586,15 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
-				RelativePath="bits.c"
+				RelativePath="..\libdts\bitstream.c"
 				>
 			</File>
 			<File
-				RelativePath="cfft.c"
+				RelativePath="..\libdts\downmix.c"
 				>
 			</File>
 			<File
-				RelativePath="common.c"
-				>
-			</File>
-			<File
-				RelativePath="decoder.c"
-				>
-			</File>
-			<File
-				RelativePath="drc.c"
-				>
-			</File>
-			<File
-				RelativePath="error.c"
-				>
-			</File>
-			<File
-				RelativePath="filtbank.c"
-				>
-			</File>
-			<File
-				RelativePath="hcr.c"
-				>
-			</File>
-			<File
-				RelativePath="huffman.c"
-				>
-			</File>
-			<File
-				RelativePath="ic_predict.c"
-				>
-			</File>
-			<File
-				RelativePath="is.c"
-				>
-			</File>
-			<File
-				RelativePath="lt_predict.c"
-				>
-			</File>
-			<File
-				RelativePath="mdct.c"
-				>
-			</File>
-			<File
-				RelativePath="mp4.c"
-				>
-			</File>
-			<File
-				RelativePath="ms.c"
-				>
-			</File>
-			<File
-				RelativePath="output.c"
-				>
-			</File>
-			<File
-				RelativePath="pns.c"
-				>
-			</File>
-			<File
-				RelativePath="pulse.c"
-				>
-			</File>
-			<File
-				RelativePath="rvlc.c"
-				>
-			</File>
-			<File
-				RelativePath="sbr_dct.c"
-				>
-			</File>
-			<File
-				RelativePath="sbr_dec.c"
-				>
-			</File>
-			<File
-				RelativePath="sbr_e_nf.c"
-				>
-			</File>
-			<File
-				RelativePath="sbr_fbt.c"
-				>
-			</File>
-			<File
-				RelativePath="sbr_hfadj.c"
-				>
-			</File>
-			<File
-				RelativePath="sbr_hfgen.c"
-				>
-			</File>
-			<File
-				RelativePath="sbr_huff.c"
-				>
-			</File>
-			<File
-				RelativePath="sbr_qmf.c"
-				>
-			</File>
-			<File
-				RelativePath="sbr_syntax.c"
-				>
-			</File>
-			<File
-				RelativePath="sbr_tf_grid.c"
-				>
-			</File>
-			<File
-				RelativePath="specrec.c"
-				>
-			</File>
-			<File
-				RelativePath="ssr.c"
-				>
-			</File>
-			<File
-				RelativePath="ssr_fb.c"
-				>
-			</File>
-			<File
-				RelativePath="ssr_ipqf.c"
-				>
-			</File>
-			<File
-				RelativePath="syntax.c"
-				>
-			</File>
-			<File
-				RelativePath="tns.c"
+				RelativePath="..\libdts\parse.c"
 				>
 			</File>
 		</Filter>
@@ -722,221 +603,41 @@
 			Filter="h;hpp;hxx;hm;inl"
 			>
 			<File
-				RelativePath="analysis.h"
+				RelativePath="..\libdts\bitstream.h"
 				>
 			</File>
 			<File
-				RelativePath="bits.h"
+				RelativePath="..\include\dts.h"
 				>
 			</File>
 			<File
-				RelativePath="cfft.h"
+				RelativePath="..\libdts\dts_internal.h"
 				>
 			</File>
 			<File
-				RelativePath="cfft_tab.h"
+				RelativePath="..\libdts\tables.h"
 				>
 			</File>
 			<File
-				RelativePath="common.h"
+				RelativePath="..\libdts\tables_adpcm.h"
 				>
 			</File>
 			<File
-				RelativePath="decoder.h"
+				RelativePath="..\libdts\tables_fir.h"
 				>
 			</File>
 			<File
-				RelativePath="drc.h"
+				RelativePath="..\libdts\tables_huffman.h"
 				>
 			</File>
 			<File
-				RelativePath="error.h"
+				RelativePath="..\libdts\tables_quantization.h"
 				>
 			</File>
 			<File
-				RelativePath="filtbank.h"
+				RelativePath="..\libdts\tables_vq.h"
 				>
 			</File>
-			<File
-				RelativePath="fixed.h"
-				>
-			</File>
-			<File
-				RelativePath="codebook\hcb.h"
-				>
-			</File>
-			<File
-				RelativePath="huffman.h"
-				>
-			</File>
-			<File
-				RelativePath="ic_predict.h"
-				>
-			</File>
-			<File
-				RelativePath="iq_table.h"
-				>
-			</File>
-			<File
-				RelativePath="is.h"
-				>
-			</File>
-			<File
-				RelativePath="kbd_win.h"
-				>
-			</File>
-			<File
-				RelativePath="lt_predict.h"
-				>
-			</File>
-			<File
-				RelativePath="mdct.h"
-				>
-			</File>
-			<File
-				RelativePath="mp4.h"
-				>
-			</File>
-			<File
-				RelativePath="ms.h"
-				>
-			</File>
-			<File
-				RelativePath="output.h"
-				>
-			</File>
-			<File
-				RelativePath="pns.h"
-				>
-			</File>
-			<File
-				RelativePath="pulse.h"
-				>
-			</File>
-			<File
-				RelativePath="rvlc.h"
-				>
-			</File>
-			<File
-				RelativePath="sbr_dct.h"
-				>
-			</File>
-			<File
-				RelativePath="sbr_dec.h"
-				>
-			</File>
-			<File
-				RelativePath="sbr_e_nf.h"
-				>
-			</File>
-			<File
-				RelativePath="sbr_fbt.h"
-				>
-			</File>
-			<File
-				RelativePath="sbr_hfadj.h"
-				>
-			</File>
-			<File
-				RelativePath="sbr_hfgen.h"
-				>
-			</File>
-			<File
-				RelativePath="sbr_huff.h"
-				>
-			</File>
-			<File
-				RelativePath="sbr_noise.h"
-				>
-			</File>
-			<File
-				RelativePath="sbr_qmf.h"
-				>
-			</File>
-			<File
-				RelativePath="sbr_syntax.h"
-				>
-			</File>
-			<File
-				RelativePath="sbr_tf_grid.h"
-				>
-			</File>
-			<File
-				RelativePath="sine_win.h"
-				>
-			</File>
-			<File
-				RelativePath="specrec.h"
-				>
-			</File>
-			<File
-				RelativePath="ssr.h"
-				>
-			</File>
-			<File
-				RelativePath="structs.h"
-				>
-			</File>
-			<File
-				RelativePath="syntax.h"
-				>
-			</File>
-			<File
-				RelativePath="tns.h"
-				>
-			</File>
-			<Filter
-				Name="codebook"
-				>
-				<File
-					RelativePath="codebook\hcb_1.h"
-					>
-				</File>
-				<File
-					RelativePath="codebook\hcb_10.h"
-					>
-				</File>
-				<File
-					RelativePath="codebook\hcb_11.h"
-					>
-				</File>
-				<File
-					RelativePath="codebook\hcb_2.h"
-					>
-				</File>
-				<File
-					RelativePath="codebook\hcb_3.h"
-					>
-				</File>
-				<File
-					RelativePath="codebook\hcb_4.h"
-					>
-				</File>
-				<File
-					RelativePath="codebook\hcb_5.h"
-					>
-				</File>
-				<File
-					RelativePath="codebook\hcb_6.h"
-					>
-				</File>
-				<File
-					RelativePath="codebook\hcb_7.h"
-					>
-				</File>
-				<File
-					RelativePath="codebook\hcb_8.h"
-					>
-				</File>
-				<File
-					RelativePath="codebook\hcb_9.h"
-					>
-				</File>
-				<File
-					RelativePath="codebook\hcb_sf.h"
-					>
-				</File>
-			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
