--- a/Filters/Decoders/MpegAudio/libmad/msvc++/libmad2008.vcproj
+++ b/Filters/Decoders/MpegAudio/libmad/msvc++/libmad2008.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="Filter_Lib"
-	ProjectGUID="{F4892194-4D03-4CAC-85C0-351DCE97B1A8}"
-	RootNamespace="Filter_Lib"
+	Name="libmad"
+	ProjectGUID="{74462BDC-197C-4142-9AAB-64BD2DA9B257}"
+	RootNamespace="libmad"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
@@ -20,8 +20,6 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="4"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
@@ -45,12 +43,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\Common,..\..\GenDMOProp"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
+				AdditionalIncludeDirectories="."
+				PreprocessorDefinitions="FPM_DEFAULT;_LIB;HAVE_CONFIG_H;ASO_ZEROCHECK;WIN32;_DEBUG;DEBUG"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderThrough="stdafx.h"
+				PrecompiledHeaderFile=".\Debug/libmad.pch"
 				BrowseInformation="1"
 				WarningLevel="3"
 				DebugInformationFormat="4"
@@ -61,14 +58,13 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="_DEBUG"
-				Culture="2057"
+				Culture="1033"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				SuppressStartupBanner="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -88,7 +84,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|x64"
-			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="4"
 			UseOfMFC="0"
@@ -114,16 +110,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\Common,..\..\GenDMOProp"
-				PreprocessorDefinitions="WIN64;_DEBUG;_LIB"
+				AdditionalIncludeDirectories="."
+				PreprocessorDefinitions="FPM_DEFAULT;_LIB;HAVE_CONFIG_H;ASO_ZEROCHECK;WIN32;_DEBUG;DEBUG"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderThrough="stdafx.h"
+				PrecompiledHeaderFile=".\Debug/libmad.pch"
 				BrowseInformation="1"
 				WarningLevel="3"
-				SuppressStartupBanner="true"
-				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
 			/>
 			<Tool
@@ -132,14 +125,13 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="_DEBUG"
-				Culture="2057"
+				Culture="1033"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				SuppressStartupBanner="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -159,7 +151,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="4"
 			UseOfMFC="0"
@@ -184,14 +176,16 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\Common,..\..\GenDMOProp"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;NOLOGGING"
+				Optimization="2"
+				InlineFunctionExpansion="1"
+				AdditionalIncludeDirectories="."
+				PreprocessorDefinitions="NDEBUG;FPM_INTEL;WIN32;_LIB;HAVE_CONFIG_H;ASO_ZEROCHECK"
+				StringPooling="true"
 				RuntimeLibrary="0"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderThrough="stdafx.h"
+				EnableFunctionLevelLinking="true"
+				PrecompiledHeaderFile=".\Release/libmad.pch"
 				BrowseInformation="1"
 				WarningLevel="3"
-				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -199,14 +193,13 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="2057"
+				Culture="1033"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				SuppressStartupBanner="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -226,7 +219,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|x64"
-			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
 			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="4"
 			UseOfMFC="0"
@@ -252,17 +245,12 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\Common,..\..\GenDMOProp"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;NOLOGGING"
-				StringPooling="true"
+				AdditionalIncludeDirectories="."
+				PreprocessorDefinitions="NDEBUG;FPM_64BIT;WIN32;_LIB;HAVE_CONFIG_H;ASO_ZEROCHECK"
 				RuntimeLibrary="0"
-				EnableFunctionLevelLinking="true"
-				UsePrecompiledHeader="2"
-				PrecompiledHeaderThrough="stdafx.h"
+				PrecompiledHeaderFile=".\Release/libmad.pch"
 				BrowseInformation="1"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -270,14 +258,13 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="2057"
+				Culture="1033"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLibrarianTool"
-				SuppressStartupBanner="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -301,224 +288,135 @@
 	<Files>
 		<Filter
 			Name="Source Files"
-			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
+			Filter="c"
 			>
 			<File
-				RelativePath="..\..\Common\CPUID.asm"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="$(InputName)"
-						CommandLine="nasm -f win32 -o $(IntDir)\$(InputName).obj -p &quot;..\..\Common\DScaler.mac&quot; $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(IntDir)\$(InputName).obj"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|x64"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="$(InputName)"
-						CommandLine="nasm -f win64 -o $(IntDir)\$(InputName).obj -p &quot;..\..\Common\DScaler.mac&quot; $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(IntDir)\$(InputName).obj"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="$(InputName)"
-						CommandLine="nasm -f win32 -o $(IntDir)\$(InputName).obj -p &quot;..\..\Common\DScaler.mac&quot; $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(IntDir)\$(InputName).obj"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|x64"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="$(InputName)"
-						CommandLine="nasm -f win64 -o $(IntDir)\$(InputName).obj -p &quot;..\..\Common\DScaler.mac&quot; $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(IntDir)\$(InputName).obj"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="DSBaseFilter.cpp"
+				RelativePath="..\bit.c"
 				>
 			</File>
 			<File
-				RelativePath="DSBasePin.cpp"
+				RelativePath="..\decoder.c"
 				>
 			</File>
 			<File
-				RelativePath=".\DSBufferedInputPin.cpp"
+				RelativePath="..\fixed.c"
 				>
 			</File>
 			<File
-				RelativePath="DSInputPin.cpp"
+				RelativePath="..\frame.c"
 				>
 			</File>
 			<File
-				RelativePath="DSOutputPin.cpp"
+				RelativePath="..\huffman.c"
 				>
 			</File>
 			<File
-				RelativePath=".\DSUtil.cpp"
+				RelativePath="..\layer12.c"
 				>
 			</File>
 			<File
-				RelativePath="EnumMediaTypes.cpp"
+				RelativePath="..\layer3.c"
 				>
 			</File>
 			<File
-				RelativePath="EnumPins.cpp"
+				RelativePath="..\stream.c"
 				>
 			</File>
 			<File
-				RelativePath="InputMemAlloc.cpp"
+				RelativePath="..\synth.c"
 				>
 			</File>
 			<File
-				RelativePath="MediaBufferWrapper.cpp"
+				RelativePath="..\timer.c"
 				>
 			</File>
 			<File
-				RelativePath=".\MediaTypes.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\MoreUuids.cpp"
-				>
-			</File>
-			<File
-				RelativePath="StdAfx.cpp"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|x64"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|x64"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="Utils.cpp"
+				RelativePath="..\version.c"
 				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
-			Filter="h;hpp;hxx;hm;inl"
+			Filter="h"
 			>
 			<File
-				RelativePath="..\..\Common\CPUID.h"
+				RelativePath="..\bit.h"
 				>
 			</File>
 			<File
-				RelativePath="DSBaseFilter.h"
+				RelativePath="config.h"
 				>
 			</File>
 			<File
-				RelativePath="DSBasePin.h"
+				RelativePath="..\decoder.h"
 				>
 			</File>
 			<File
-				RelativePath=".\DSBufferedInputPin.h"
+				RelativePath="..\fixed.h"
 				>
 			</File>
 			<File
-				RelativePath="DSInputPin.h"
+				RelativePath="..\frame.h"
 				>
 			</File>
 			<File
-				RelativePath="DSOutputPin.h"
+				RelativePath="..\global.h"
 				>
 			</File>
 			<File
-				RelativePath=".\DSUtil.h"
+				RelativePath="..\huffman.h"
 				>
 			</File>
 			<File
-				RelativePath="EnumMediaTypes.h"
+				RelativePath="..\layer12.h"
 				>
 			</File>
 			<File
-				RelativePath="EnumPins.h"
+				RelativePath="..\layer3.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\Common\GenDMOProp.h"
+				RelativePath="..\stream.h"
 				>
 			</File>
 			<File
-				RelativePath="InputMemAlloc.h"
+				RelativePath="..\synth.h"
 				>
 			</File>
 			<File
-				RelativePath="MediaBufferWrapper.h"
+				RelativePath="..\timer.h"
 				>
 			</File>
 			<File
-				RelativePath=".\MediaTypes.h"
-				>
-			</File>
-			<File
-				RelativePath=".\MoreUuids.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\Common\Params.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\Common\ProtectCode.h"
-				>
-			</File>
-			<File
-				RelativePath="StdAfx.h"
-				>
-			</File>
-			<File
-				RelativePath="Utils.h"
+				RelativePath="..\version.h"
 				>
 			</File>
 		</Filter>
-		<File
-			RelativePath="Readme.txt"
+		<Filter
+			Name="Data Files"
+			Filter="dat"
 			>
-		</File>
+			<File
+				RelativePath="..\D.dat"
+				>
+			</File>
+			<File
+				RelativePath="..\imdct_s.dat"
+				>
+			</File>
+			<File
+				RelativePath="..\qc_table.dat"
+				>
+			</File>
+			<File
+				RelativePath="..\rq_table.dat"
+				>
+			</File>
+			<File
+				RelativePath="..\sf_table.dat"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
